--- a/src/components/common/button/button.module.css
+++ b/src/components/common/button/button.module.css
@@ -1,7 +1,39 @@
 .btn {
-  color: green;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.add {
-  background: black;
+.btn:focus {
+  outline: none;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.btn:active {
+  transform: scale(0.95);
+}
+
+/* Add Button */
+
+.btn-add {
+  padding: 5px;
+  background: green;
+  color: white;
+  opacity: 0.9;
+}
+
+/* Delete Button */
+
+.btn-delete {
+  height: 20px;
+  width: 20px;
+  opacity: 0.6;
+  border: none;
+  background: url("../../../assets/icons/delete-icon.svg");
+  background-size: contain;
+}
+
+.btn-delete:hover {
 }
