--- a/src/components/common/button/button.module.css
+++ b/src/components/common/button/button.module.css
@@ -18,22 +18,20 @@
 /* Add Button */
 
 .btn-add {
-  padding: 5px;
-  opacity: 0.9;
-  color: white;
-  background: green;
+  border: none;
+  opacity: 0.7;
+  display: flex;
+  padding-left: 0px;
+  font-size: inherit;
 }
 
 /* Delete Button */
 
 .btn-delete {
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   opacity: 0.6;
   border: none;
   background: url("../../../assets/icons/delete-icon.svg");
   background-size: contain;
-}
-
-.btn-delete:hover {
 }
